Arreglada la barra inferior

--- a/index.html
+++ b/index.html
@@ -16,21 +16,10 @@
     </section>
     </header>
     <main>
-       <p class = "grande"> hola </p>
-       <p class = "grande"> hola </p>
-       <p class = "grande"> hola </p>
-       <p class = "grande"> hola </p>
-       <p class = "grande"> hola </p>
-       <p class = "grande"> hola </p>
-       <p class = "grande"> hola </p>
-       <p class = "grande"> hola </p>
-       <p class = "grande"> hola </p>
-       <p class = "grande"> hola </p>
-       <p class = "grande"> hola </p>
-       <p class = "grande"> hola </p>
+     <img src="1.png" class = "boletin">
     </main>
     <footer>
-        <section class="derecha">
+        <section class="barrainferior">
             <a href="https://www.instagram.com/la_libertad_avanza_san_isidro_/" target="_blank">
             <img src = "Instagram.png" class = "logoig">
             </a>
@@ -42,4 +31,3 @@
 </body>
 </html> 
 
-<!-- VER XQ LA BARRA NO DESAPARECE-->
