Xq no funciona margin 0 auto??

--- a/index.html
+++ b/index.html
@@ -15,9 +15,21 @@
     <section>
     </section>
     </header>
-    <main>
-     <img src="1.png" class = "boletin">
-    </main>
+
+    <section class="conteiner">
+        <article>
+            <img src="1.png">
+        </article>
+        <article>
+            <img src="2.png">
+        </article>
+        <article>
+            <img src="3.png">
+        <article>
+            <img src="4.png">
+        </article>
+    </section>
+
     <footer>
         <section class="barrainferior">
             <a href="https://www.instagram.com/la_libertad_avanza_san_isidro_/" target="_blank">
