--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title id = "inicio">LLA SI</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="navbar">
@@ -17,17 +18,12 @@
     </header>
 
     <section class="conteiner">
-        <article>
-            <img src="1.png">
+        <article id = "boletin">
+                <a href="BoletinLLA.pdf" target="_blank">  
+                    <img src = "boletinoficial.png">
+                </a>
         </article>
-        <article>
-            <img src="2.png">
-        </article>
-        <article>
-            <img src="3.png">
-        <article>
-            <img src="4.png">
-        </article>
+        <p id = "TextoBoletin"> BOLETIN SEMANAL DONDE DESCRIBIMOS DE MANERA DETALLADA LOS RESULTADOS, OBJETIVOS Y COMUNICADOS IMPORTANTES DE LA SEMANA.</p>
     </section>
 
     <footer>
