Creada carpeta Sources

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header class="navbar">
-        <img src = "logo.png" class = "logo">
+        <img src = "Sources/logo.png" class = "logo">
         <nav class = "menu">
             <a href="#inicio">Inicio</a>
             <a href="#servicios">Servicios</a>
@@ -19,8 +19,8 @@
 
     <section class="conteiner">
         <article id = "boletin">
-                <a href="BoletinLLA.pdf" target="_blank">  
-                    <img src = "boletinoficial.png">
+                <a href="Sources/BoletinLLA.pdf" target="_blank">  
+                    <img src = "Sources/boletinoficial.png">
                 </a>
         </article>
         <p id = "TextoBoletin"> BOLETIN SEMANAL DONDE DESCRIBIMOS DE MANERA DETALLADA LOS RESULTADOS, OBJETIVOS Y COMUNICADOS IMPORTANTES DE LA SEMANA.</p>
@@ -29,10 +29,10 @@
     <footer>
         <section class="barrainferior">
             <a href="https://www.instagram.com/la_libertad_avanza_san_isidro_/" target="_blank">
-            <img src = "Instagram.png" class = "logoig">
+            <img src = "Sources/Instagram.png" class = "logoig">
             </a>
             <a href=https://chat.whatsapp.com/KjfvD5KBEhu8LXddeevnG0 target="_blank">
-                <img src = "whatsapp.png" class = "logoig">
+                <img src = "Sources/whatsapp.png" class = "logoig">
             </a>
         </section>
     </footer>
