--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Document</title>
+    <title>LLA SI</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <img src ="./Sources/logo.png" alt = "Logo" class="logo">
+        <img src ="Sources/logo.png" alt = "Logo" class="logo">
         <button id= "abrir"class="abrir-menu"><i class="bi bi-list"></i></button>
         <nav class="nav" id="nav">
             <button id="cerrar" class="cerrar-menu"><i class="bi bi-x"></i></button>
@@ -20,9 +20,6 @@
             </ul>
         </nav>
     </header>
-
-
-
-    <script src = "./js.js"></script>
+    <script src = "js.js"></script>
 </body>
 </html>
