Boton de inicio funcional

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="nav" id="nav">
             <button id="cerrar" class="cerrar-menu"><i class="bi bi-x"></i></button>
             <ul class="nav-list">
-                <li><a href="#"> Inicio</a></li>
+                <li><a href="index.html"> Inicio</a></li>
                 <li><a href="#"> Fiscalización</a></li>
                 <li><a href="#"> Sumate a la Juventud</a></li>
                 <li><a href="#"> Sumate al Equipo</a></li>
