--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
             </ul>
         </nav>
     </header>
+
     <script src = "js.js"></script>
+
+    <section>
+        <div class="banner-slider">
+            <div class="slide">
+                <img id="slider-1" src="Sources/imagen1.jpg" alt="Imagen 1">
+                <img id="slider-2" src="Sources/imagen2.jpg" alt="Imagen 2">
+                <img id="slider-3" src="Sources/imagen3.jpg" alt="Imagen 3">
+            </div>
+        </div>
+    </section>
+    <script src = "slider.js"></script>
 </body>
 </html>
