Agregado el Footer

--- a/index.html
+++ b/index.html
@@ -7,32 +7,37 @@
     <link rel="stylesheet" href="style.css?v=1.3">
 </head>
 <body>
-    <header>
-        <img src ="Sources/logo.png" alt = "Logo" class="logo">
-        <button id= "abrir"class="abrir-menu"><i class="bi bi-list"></i></button>
-        <nav class="nav" id="nav">
-            <button id="cerrar" class="cerrar-menu"><i class="bi bi-x"></i></button>
-            <ul class="nav-list">
-                <li><a href="index.html"> Inicio</a></li>
-                <li><a href="#"> Fiscalización</a></li>
-                <li><a href="#"> Sumate a la Juventud</a></li>
-                <li><a href="#"> Sumate al Equipo</a></li>
-                <li> <a href="#"> Redes Sociales</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="conteiner-all">
+        <header>
+            <img src ="Sources/logo.png" alt = "Logo" class="logo">
+            <button id= "abrir"class="abrir-menu"><i class="bi bi-list"></i></button>
+            <nav class="nav" id="nav">
+                <button id="cerrar" class="cerrar-menu"><i class="bi bi-x"></i></button>
+                <ul class="nav-list">
+                    <li><a href="index.html"> Inicio</a></li>
+                    <li><a href="#"> Fiscalización</a></li>
+                    <li><a href="#"> Sumate a la Juventud</a></li>
+                    <li><a href="#"> Sumate al Equipo</a></li>
+                    <li> <a href="#"> Redes Sociales</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <script src = "js.js"></script>
+        <script src = "js.js"></script>
 
-    <section>
-        <div class="banner-slider">
-            <div class="slide">
-                <img id="slider-1" src="Sources/imagen1.jpg" alt="Imagen 1">
-                <img id="slider-2" src="Sources/imagen2.jpg" alt="Imagen 2">
-                <img id="slider-3" src="Sources/imagen3.jpg" alt="Imagen 3">
+        <section>
+            <div class="banner-slider">
+                <div class="slide">
+                    <img id="slider-1" src="Sources/imagen1.jpg" alt="Imagen 1">
+                    <img id="slider-2" src="Sources/imagen2.jpg" alt="Imagen 2">
+                    <img id="slider-3" src="Sources/imagen3.jpg" alt="Imagen 3">
+                </div>
             </div>
-        </div>
-    </section>
-    <script src = "slider.js"></script>
+        </section>
+        <script src = "slider.js"></script>
+        <footer>
+            © 2024 La Libertad Avanza San Isidro. Todos los derechos reservados.
+        </footer>
+    </div>
 </body>
 </html>
