Link form Juventud

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul class="nav-list">
                     <li><a href="index.html"> Inicio</a></li>
                     <li><a href="#"> Fiscalización</a></li>
-                    <li><a href="#"> Sumate a la Juventud</a></li>
+                    <li><a href="https://forms.gle/w6kYG5BRC8oQtrAM7" target="_blank"> Sumate a la Juventud</a></li>
                     <li><a href="#"> Sumate al Equipo</a></li>
                     <li> <a href="#"> Redes Sociales</a></li>
                 </ul>
