--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>LLA SI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="style.css?v=1.4">
+    <link rel="stylesheet" href="style.css?v=1.5">
 </head>
 <body>
     <div class="conteiner-all">
@@ -17,7 +17,7 @@
                     <li><a href="index.html"> Inicio</a></li>
                     <li><a href="#"> Fiscalización</a></li>
                     <li><a href="https://forms.gle/w6kYG5BRC8oQtrAM7" target="_blank"> Sumate a la Juventud</a></li>
-                    <li><a href="#"> Sumate al Equipo</a></li>
+                    <li><a href="https://forms.gle/4BadAXwJnMY9c6dVA"> Sumate al Equipo</a></li>
                     <li> <a href="#"> Redes Sociales</a></li>
                 </ul>
             </nav>
