--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="slide">
                     <img id="slider-1" src="Sources/banner1.png" alt="Imagen 1">
                     <img id="slider-2" src="Sources/banner2.png" alt="Imagen 2">
-                    <img id="slider-3" src="Sources/banner3.png" alt="Imagen 3">
+                    <img id="slider-3" src="Sources/banner3.png" alt="Imagen 3">*/
                 </div>
             </div>
         </section>
