Articulos y boletín oficial

--- a/index.html
+++ b/index.html
@@ -35,9 +35,44 @@
             </div>
         </section>
         <script src = "slider.js"></script>
+        
+        <div class="box">
+            <div>
+                <h2>Boletín Oficial</h2>
+                <p>Boletín semanal de "La Libertad Avanza San Isidro"</p>
+                <a href="Sources/BoletinLLA.pdf" target="_blank">
+                  <button class="pdf-button">
+                    <i class="bi bi-filetype-pdf"></i>
+                  </button>
+                </a>
+            </div>
+            <div>
+              <h2>Artículo 2</h2>
+              <p>
+                Este es el contenido extenso del segundo artículo. Usa este espacio para
+                incluir cualquier detalle importante, narrativa o información útil para los lectores.
+              </p>
+            </div>
+            <div>
+              <h2>Artículo 3</h2>
+              <p>
+                Este es el contenido extenso del tercer artículo. Puedes personalizar
+                completamente el contenido para que sea único y detallado.
+              </p>
+            </div>
+            <div>
+                <h2>Artículo 4</h2>
+                <p>
+                  Este es el contenido extenso del cuarto artículo. Agrega toda la información que desees aquí.
+                </p>
+              </div>
+          </div>
+
         <footer>
             © 2024 La Libertad Avanza San Isidro. Todos los derechos reservados.
         </footer>
     </div>
+
+    
 </body>
 </html>
