--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#"> Fiscalización</a></li>
                     <li><a href="https://forms.gle/w6kYG5BRC8oQtrAM7" target="_blank"> Sumate a la Juventud</a></li>
                     <li><a href="https://forms.gle/4BadAXwJnMY9c6dVA" target="_blank"> Sumate al Equipo</a></li>
-                    <li> <a href="#"> Redes Sociales</a></li>
+                    <li> <a href="https://linktr.ee/LLA_SI" target="_blank"> Redes Sociales</a></li>
                 </ul>
             </nav>
         </header>
