Comentario de mas fix

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>LLA SI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="style.css?v=1.7">
+    <link rel="stylesheet" href="style.css?v=1.8">
 </head>
 <body>
     <div class="conteiner-all">
@@ -30,7 +30,7 @@
                 <div class="slide">
                     <img id="slider-1" src="Sources/banner1.png" alt="Imagen 1">
                     <img id="slider-2" src="Sources/banner2.png" alt="Imagen 2">
-                    <img id="slider-3" src="Sources/banner3.png" alt="Imagen 3">*/
+                    <img id="slider-3" src="Sources/banner3.png" alt="Imagen 3">
                 </div>
             </div>
         </section>
