--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
           </div>
 
         <footer>
-            © 2024 La Libertad Avanza San Isidro. Todos los derechos reservados.
+            <p>© 2024 La Libertad Avanza San Isidro.</p>
+            <p>Todos los derechos reservados.</p>
         </footer>
     </div>
 
