--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
           </div>
 
         <footer>
-            <p>© 2024 La Libertad Avanza San Isidro.</p>
-            <p>Todos los derechos reservados.</p>
+            <p>© 2024 La Libertad Avanza San Isidro. <br class="movile"> Todos los derechos reservados.</p>
         </footer>
     </div>
 
