Color blanco y fondo al logo

--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 <body>
     <div class="conteiner-all">
         <header>
+          <div class="logo-container">
             <img src ="Sources/logo.png" alt = "Logo" class="logo">
-            <button id= "abrir"class="abrir-menu"><i class="bi bi-list"></i></button>
-            <nav class="nav" id="nav">
-                <button id="cerrar" class="cerrar-menu"><i class="bi bi-x"></i></button>
-                <ul class="nav-list">
-                    <li><a href="index.html"> Inicio</a></li>
-                    <li><a href="#"> Fiscalización</a></li>
-                    <li><a href="https://forms.gle/w6kYG5BRC8oQtrAM7" target="_blank"> Sumate a la Juventud</a></li>
-                    <li><a href="https://forms.gle/4BadAXwJnMY9c6dVA" target="_blank"> Sumate al Equipo</a></li>
-                    <li> <a href="https://linktr.ee/LLA_SI" target="_blank"> Redes Sociales</a></li>
-                </ul>
-            </nav>
+          </div>
+              <button id= "abrir"class="abrir-menu"><i class="bi bi-list"></i></button>
+              <nav class="nav" id="nav">
+                  <button id="cerrar" class="cerrar-menu"><i class="bi bi-x"></i></button>
+                  <ul class="nav-list">
+                      <li><a href="index.html"> Inicio</a></li>
+                      <li><a href="#"> Fiscalización</a></li>
+                      <li><a href="https://forms.gle/w6kYG5BRC8oQtrAM7" target="_blank"> Sumate a la Juventud</a></li>
+                      <li><a href="https://forms.gle/4BadAXwJnMY9c6dVA" target="_blank"> Sumate al Equipo</a></li>
+                      <li> <a href="https://linktr.ee/LLA_SI" target="_blank"> Redes Sociales</a></li>
+                  </ul>
+              </nav>
         </header>
 
         <script src = "js.js"></script>
