--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </a>
             </div>
             <div>
-              <a href="tu_pagina.html" class="icon-link">
+              <a href="juv.html" class="icon-link">
                 <h2>Juventud LLA SI</h2>
                   <div class="icon-container">
                     <i class="bi bi-people-fill"></i>
