--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>LLA SI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="style.css?v=3.1">
+    <link rel="stylesheet" href="style.css?v=3.2">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 </head>
@@ -38,6 +38,7 @@
                     <img id="slider-3" src="Sources/banner3.png" alt="Imagen 3">
                 </div>
             </div>
+            <div class="linea"></div>
         </section>
         <script src = "slider.js"></script>
         
