--- a/juv.html
+++ b/juv.html
@@ -3,7 +3,7 @@
     <title>LLA SI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="juvStyle.css?v=3.4">
+    <link rel="stylesheet" href="juvStyle.css?v=3.4.1">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -31,7 +31,7 @@
             </div>
             <div class="bio-text">
               <h2>LAILA SCHMIDT "COORDINADORA JUVENTUD LLA SI"</h2>
-              <p>Laila Schmidt es una joven argentina de 23 años, originaria de Becar, San Isidro, provincia de Buenos Aires. Actualmente, es estudiante de Administración de Empresas en la Facultad de Ciencias Económicas de la Universidad de Buenos Aires.
+              <p>Laila Schmidt es una joven argentina de 23 años, originaria de Beccar, San Isidro, provincia de Buenos Aires. Actualmente, es estudiante de Administración de Empresas en la Facultad de Ciencias Económicas de la Universidad de Buenos Aires.
                 Desde 2020, ha estado militando para Javier Milei y, a partir de 2024, se desempeña como Coordinadora de la Juventud de la Libertad Avanza de San Isidro. Además, es activa en la política universitaria, militando para La Libertad Avanza.</p>
             </div>
         </div>
