--- a/juv.html
+++ b/juv.html
@@ -38,8 +38,11 @@
         <div class="sumate-juv">
             <h1>Sumate a la Juventud de La Libertad Avanza San Isidro</h1>
             <p>Si tenés entre 16 y 30 años, te invitamos a sumarte a la Juventud de La Libertad Avanza San Isidro. Completá el formulario y nos pondremos en contacto con vos.</p>
-            <button class="sumate-button"><a href="https://forms.gle/w6kYG5BRC8oQtrAM7" target="_blank">Sumate</a></button>
-            <img class="sumate-img" src="Sources/juv.jpg"/>
+            <div class="button-container">
+                <button class="sumate-button"><a href="https://forms.gle/w6kYG5BRC8oQtrAM7" target="_blank">Sumate</a></button>
+                <button class="sumate-button"><a href="https://www.instagram.com/jlla.sanisidro/" target="_blank">Instragram</a></button>
+            </div>
+                <img class="sumate-img" src="Sources/juv.jpg"/>
         </div>
         <footer>
             <p>© 2024 La Libertad Avanza San Isidro. <br class="movile"> Todos los derechos reservados.</p>
