--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         
         <div class="box">
             <div>
-              <a href="tu_pagina.html" class="icon-link">
+              <a href="LLA-SI.html" class="icon-link">
                 <h2>Coordinación LLA SI</h2>
                   <div class="icon-container">
                       <i class="bi bi-person-fill"></i>
