--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               </a>
             </div>
             <div>
-              <a href="tu_pagina.html" class="icon-link">
+              <a href="afiliacion.html" class="icon-link">
                 <h2>Afiliación</h2>
                   <div class="icon-container">
                     <i class="bi bi-shield-fill-check"></i>
