--- a/afiliacion.html
+++ b/afiliacion.html
@@ -26,13 +26,36 @@
               <script src = "js.js"></script>
         </header>
         <div class="text-all-container">
-            <div class="text-1-container">
+            <div>
                 <h1>¿Porqué deberia afiliarme?</h1>
                 <p>Tu afiliación a un partido político puede ayudarte a influir en la toma de decisiones dentro del partido, participar en procesos de selección de candidatos y apoyar políticas específicas. Además, al ser parte de un partido, puedes contribuir a formar parte de una comunidad política activa  o no pero si comprometida con tus valores e ideales. También puede brindarte oportunidades para desarrollar habilidades de liderazgo, establecer contactos y colaborar en campañas electorales. Sin embargo, es importante recordar que la afiliación conlleva responsabilidades y compromisos, por lo que debes estar informado y comprometido con la visión y objetivos del partido.</p>
             </div>
+            <div> 
+                <h1>¿Qué necesito para afiliarme?</h1>
+                <p>Para afiliarte a un partido político por lo general necesitas ser mayor de edad, estar en pleno goce de tus derechos civiles, completar un formulario de afiliación, presentar una copia de tu documento de identidad. Es importante verificar los requisitos específicos de afiliación de cada partido, ya que estos pueden variar. Contacta directamente al partido político al que deseas afiliarte para obtener información detallada sobre el proceso de afiliación.</p>
+            </div>
+            <div>     
+                <h1>¿Cómo ayuda mi afiliación a un partido político?</h1>
+                <p>Tu afiliación a un partido político puede ayudarte a influir en la toma de decisiones dentro del partido, participar en procesos de selección de candidatos y apoyar políticas específicas. Además, al ser parte de un partido, puedes contribuir a formar parte de una comunidad política activa  o no pero si comprometida con tus valores e ideales. También puede brindarte oportunidades para desarrollar habilidades de liderazgo, establecer contactos y colaborar en campañas electorales. Sin embargo, es importante recordar que la afiliación conlleva responsabilidades y compromisos, por lo que debes estar informado y comprometido con la visión y objetivos del partido.</p>
+            </div>
+            <div>     
+                <h1>¿Comó me afilio?</h1>
+                <p>Para afiliarte a La Libertad Avanza, simplemente completa el formulario de afiliación con tus datos personales, como tu nombre y documento de identidad. También deberás presentar una copia de tu DNI como documento de identificación. Una vez enviado el formulario, recibirás la confirmación de tu afiliación y podrás empezar a participar activamente en las actividades del partido.</p>
+            </div>
         </div>
-        <footer>
-            <p>© 2024 La Libertad Avanza San Isidro. <br class="movile"> Todos los derechos reservados.</p>
-        </footer>
+        <div class="sumate-afiliacion">
+            <div class="sumate-text">
+                <h1>Afiliate a La Libertad Avanza</h1>
+                <p>Afiliate a La Libertad Avanza y sé parte de la construcción de un país con menos impuestos, menos burocracia y más oportunidades. ¡Sumate y hacé la diferencia!</p>
+            </div>
+        <div class="button-container">
+                <button class="sumate-button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSePSn06-N0KCZSg3Tl1rFeXXugp-lbEw3TyOLAJcluuzG2d1A/viewform" target="_blank">Afiliarse</a></button>
+        </div>
+        <img class="sumate-img" src="Sources/LLA6.jpg"/>
+        </div>
+    </div>
+    <footer>
+        <p>© 2024 La Libertad Avanza San Isidro. <br class="movile"> Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
