--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   </ul>
               </nav>
         </header>
-
+        <div class="overlay" id="overlay"></div>
         <script src = "js.js"></script>
         <script src = "clickMenu.js"></script>
 
