--- a/LLA-SI.html
+++ b/LLA-SI.html
@@ -27,12 +27,14 @@
         </header>
         <div class="bio-container">
             <div class="bio-image">
-              <img src="Sources/laila.jpg"/>
+              <img src="Sources/ale.jpg"/>
             </div>
             <div class="bio-text">
               <h2>ALEJANDRO MARTUCCI "COORDINADOR LLA SI"</h2>
-              <p>Laila Schmidt es una joven argentina de 23 años, originaria de Beccar, San Isidro, provincia de Buenos Aires. Actualmente, es estudiante de Administración de Empresas en la Facultad de Ciencias Económicas de la Universidad de Buenos Aires.
-                Desde 2020, ha estado militando para Javier Milei y, a partir de 2024, se desempeña como Coordinadora de la Juventud de la Libertad Avanza de San Isidro. Además, es activa en la política universitaria, militando para La Libertad Avanza.</p>
+              <p>Alejandro Martucci, Coordinador de La Libertad Avanza en San Isidro, de 58 años, nacido, criado y donde reside desde siempre en Martinez, Partido de San Isidro, Provincia de Buenos Aires.
+                Licenciado en Relaciones Públicas e Institucionales en UADE, con Posgrado en Neuromarketing en la Fundación Braidot.
+                He colaborado con el Presidente Milei desde sus inicios, acompañándolo en diversas recorridas por el Partido, comprometido desde el comienzo con la causa de la Libertad.
+                Desde el 2021 trabaja en el armado y las propuesta de La Libertad Avanza en San Isidro.</p>
             </div>
         </div>
         <div class="sumate-juv">
