--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <a href="LLA-SI.html" class="icon-link">
                 <h2>Coordinación LLA SI</h2>
                   <div class="icon-container">
-                      <i class="bi bi-person-fill"></i>
+                    <img src="Sources/Icon1.jpg" alt="Descripción" class="box-icon">
                   </div>
               </a>
             </div>
@@ -55,7 +55,7 @@
               <a href="juv.html" class="icon-link">
                 <h2>Juventud LLA SI</h2>
                   <div class="icon-container">
-                    <i class="bi bi-people-fill"></i>
+                    <img src="Sources/Icon2.jpg" alt="Descripción" class="box-icon">
                   </div>
               </a>
             </div>
@@ -63,7 +63,7 @@
               <a href="tu_pagina.html" class="icon-link">
                 <h2>Fiscalización</h2>
                   <div class="icon-container">
-                    <i class="bi bi-archive-fill"></i>
+                    <img src="Sources/Icon3.jpg" alt="Descripción" class="box-icon">
                   </div>
               </a>
             </div>
@@ -71,7 +71,7 @@
               <a href="afiliacion.html" class="icon-link">
                 <h2>Afiliación</h2>
                   <div class="icon-container">
-                    <i class="bi bi-shield-fill-check"></i>
+                    <img src="Sources/Icon4.jpg" alt="Descripción" class="box-icon">
                   </div>
               </a>
             </div>
