--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                   <ul class="nav-list">
                       <li><a href="index.html"> Inicio</a></li>
                       <li><a href="#"> Fiscalización</a></li>
-                      <li><a href="https://forms.gle/w6kYG5BRC8oQtrAM7" target="_blank"> Sumate a la Juventud</a></li>
-                      <li><a href="https://forms.gle/4BadAXwJnMY9c6dVA" target="_blank"> Sumate al Equipo</a></li>
+                      <li><a href="juv.html" >Juventud</a></li>
+                      <li><a href="LLA-SI.html">Coordinación General </a></li>
                       <li> <a href="https://linktr.ee/LLA_SI" target="_blank"> Redes Sociales</a></li>
                   </ul>
               </nav>
