--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta property="og:title" content="La Libertad Avanza San Isidro" />
     <meta property="og:image" content="https://drive.google.com/uc?export=view&id=1YubVZFkXISbylyUk2PouV1VOenJrhCuq" />
-    <meta property="og:url" content="https://tusitio.com" />
+    <meta property="og:url" content="https://lalibertadavanzasanisidro.ar" />
     <meta property="og:type" content="website" />
 
 </head>
