--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css?v=3.6">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta property="og:title" content="La Libertad Avanza San Isidro" />
-    <meta property="og:image" content=https://imgur.com/a/Pod3alB />
+    <meta property="og:image" content="https://imgur.com/a/Pod3alB" />
     <meta property="og:url" content="https://lalibertadavanzasanisidro.ar" />
     <meta property="og:type" content="website" />
 
