--- a/afiliacion.html
+++ b/afiliacion.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>LLA SI</title>
+    <title>AFILIACIONES LLA SI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="afiliacionStyle.css?v=3.5">
