Fix Titulos & Logos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:url" content="https://lalibertadavanzasanisidro.ar" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Página Oficial LLA SI" />
+    <link rel="icon" type="image/png" href="Sources/aguila.png">
 
 </head>
 <body>
