--- a/afiliacion.html
+++ b/afiliacion.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <head>
-    <title>AFILIACIONES LLA SI</title>
+    <title>LLA SI | AFILIACIONES</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="afiliacionStyle.css?v=3.5">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="Sources/aguila.png">
 </head>
 <body>
     <div class="conteiner-all">
