--- a/LLA-SI.html
+++ b/LLA-SI.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="LLA-SIstyle.css?v=3.5">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="Sources/aguila.png">
+    <link rel="shortcut icon" type="image/png" href="Sources/aguila.png">
 </head>
 <body>
     <div class="conteiner-all">
