--- a/afiliacion.html
+++ b/afiliacion.html
@@ -52,7 +52,7 @@
         <div class="button-container">
                 <button class="sumate-button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSePSn06-N0KCZSg3Tl1rFeXXugp-lbEw3TyOLAJcluuzG2d1A/viewform" target="_blank">Afiliarse</a></button>
         </div>
-        <img class="sumate-img" src="Sources/LLA6.jpg"/>
+        <img class="sumate-img" src="Sources/pato.jpg"/>
         </div>
     </div>
     <footer>
