--- a/afiliacion.html
+++ b/afiliacion.html
@@ -21,7 +21,7 @@
                     <li><a href="#"> Fiscalización</a></li>
                     <li><a href="juv.html" >Juventud</a></li>
                     <li><a href="LLA-SI.html">Coordinación General </a></li>
-                    <li> <a href="https://linktr.ee/LLA_SI" target="_blank"> Redes Sociales</a></li>
+                    <li> <a href="https://linktr.ee/lalibertadavanzasanisidro" target="_blank"> Redes Sociales</a></li>
                 </ul>
               </nav>
               <script src = "js.js"></script>
